--- a/public/admin.html
+++ b/public/admin.html
@@ -12,6 +12,11 @@
     <!-- Cabeçalho -->
     <header class="app-header">
       <h1>Admin - Brutus Burger</h1>
+      <div class="header-actions">
+        <button id="customization-btn" class="icon-button" title="Personalização">
+          <i class="fas fa-palette"></i>
+        </button>
+      </div>
     </header>
 
     <!-- Lista de Produtos -->
