Add swipe gesture support and cart swipe indicator
Implemented swipe gestures for navigating products and opening the cart on both mobile and desktop. Added a visual swipe-up indicator for the cart, with styles and logic to hide it after first use. Updated CSS for cursor and touch feedback, and adjusted responsive behavior for the new indicator.

--- a/public/pedido.html
+++ b/public/pedido.html
@@ -232,6 +232,11 @@
         </div>
       </div>
     </div>
+    <!-- Indicador de swipe para cima (carrinho) -->
+    <div class="swipe-up-indicator">
+      <div class="swipe-up-bar"></div>
+      <div class="swipe-up-text">Deslize para cima para ver o carrinho</div>
+    </div>
   </div>
   <script src="pedido-script.js"></script>
   <script src="entrega.js"></script>
