Add WhatsApp QR modal and image debug tools
Implements WhatsApp QR code integration in the admin panel, including modal UI and frontend logic for connection status and error handling. Adds multiple debug and test files for image loading and carousel issues, and updates the order page scripts to ensure product images render correctly by converting relative URLs to absolute. Also improves the checkout modal with client and delivery form fields, and enhances category and product management logic.

--- a/public/debug.html
+++ b/public/debug.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Teste de Imagens</title>
+  <title>Debug de Imagens</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -33,7 +33,7 @@
   </style>
 </head>
 <body>
-  <h1>Teste de Carregamento de Imagens</h1>
+  <h1>Debug de Imagens</h1>
   
   <div class="image-test">
     <h2>Teste 1: Imagem de um produto específico</h2>
