--- a/public/admin.html
+++ b/public/admin.html
@@ -13,6 +13,9 @@
     <header class="app-header">
       <h1>Admin - Brutus Burger</h1>
       <div class="header-actions">
+        <button id="whatsapp-btn" class="icon-button" title="Vincular WhatsApp">
+          <i class="fab fa-whatsapp"></i>
+        </button>
         <button id="customization-btn" class="icon-button" title="Personalização">
           <i class="fas fa-palette"></i>
         </button>
@@ -117,6 +120,30 @@
             <button id="cancel-delete-btn" class="cancel-button">Cancelar</button>
             <button id="confirm-delete-btn" class="delete-button">Excluir</button>
           </div>
+        </div>
+      </div>
+    </div>
+    
+    <!-- Modal do QR Code do WhatsApp -->
+    <div id="whatsapp-modal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2>Vincular WhatsApp</h2>
+          <button class="close-button">&times;</button>
+        </div>
+        <div class="modal-body">
+          <p>Para vincular o WhatsApp do restaurante, escaneie o QR Code abaixo com o WhatsApp do seu celular:</p>
+          <div id="qr-code-container" class="qr-code-container">
+            <p>Carregando QR Code...</p>
+          </div>
+          <p><strong>Instruções:</strong></p>
+          <ol>
+            <li>Abra o WhatsApp no seu celular</li>
+            <li>Toque em "Dispositivos vinculados" ou "Linked Devices"</li>
+            <li>Selecione "Vincular um dispositivo" ou "Link a device"</li>
+            <li>Aponte a câmera do seu celular para o QR Code acima</li>
+          </ol>
+          <button id="refresh-qr-btn" class="checkout-button">Atualizar QR Code</button>
         </div>
       </div>
     </div>
